# Yana

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  ESLINT_FIX_PLAN.md  GEMINI.md  GREADER_IMPLEMENTATION_PLAN.md  LICENSE  MERKUR_IMPLEMENTATION_PLAN.md  PHASE_8_IMPLEMENTATION_GUIDE.md  README.md  REDDIT_IMAGE_ANALYSIS.md  REFACTORING_COMPLETION_SUMMARY.md  REFACTORING_LOG.md  SQLITE_OPTIMIZATIONS_SUMMARY.md  X_FRAME_OPTIONS_IMPACT_ANALYSIS.md  YOUTUBE_EMBEDDING_COMPARISON.md  angular.json  docker-compose.example.yml  docker-compose.production.yml  docker-compose.yml  docker-entrypoint.sh  drizzle.config.ts  eslint.config.mjs  example_usage.py  manage.py  ngsw-config.json  openapi-ts.config.ts  package-lock.json  package.json  pyproject.toml  reddit_image_investigation.py  requirements.txt  supervisord.conf  test_aggregators.py  test_output.txt  test_sqlite_backend.py  test_tagesschau.py  (+2 more)
.claude/: README.md
.claude/hooks/: session-start
.cursor/: README.md  hooks.json  mcp.json
.cursor/commands/: investigate.md  new.md
.cursor/hooks/: README.md  format-and-fix.sh  pre-commit.sh
.cursor/rules/: aggregator-guidelines.mdc  aggregators.mdc  angular.mdc  commands.mdc  django.mdc  frontend.mdc  general.mdc  python.mdc  testing.mdc  workflow.mdc
.gemini/commands/: review.md
.github/workflows/: ci.yml  docker-publish.yml
.husky/: pre-commit
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
core/: admin.py  ai_client.py  apps.py  autocomplete.py  choices.py  forms.py  models.py  tests.py
docs/: AGGREGATOR_FLOW.md  BACKWARDS_COMPATIBILITY.md  BATCH_TASKS_PERFORMANCE_PLAN.md  ESLINT.md  TEST_COVERAGE_GAP_DAILY_LIMIT.md  TEST_IMPLEMENTATION_STATUS.md  TEST_PLAN_AGGREGATOR_OPTIONS.md
hooks/: README.md
legacy_backend/: .env.example  manage.py  pyproject.toml  requirements.txt  test_duplicate_detection.py  test_image_validation.py  test_rss_auth.py  test_sync_managed_feeds.py  test_user_isolation.py  test_youtube_api.py  test_youtube_podcast.py
old/: .prettierignore  LICENSE  README.md  angular.json  docker-compose.example.yml  docker-compose.production.yml  docker-compose.yml  drizzle.config.ts  ngsw-config.json  openapi-ts.config.ts  proxy.conf.json  tsconfig.server.json  vite.config.ts
public/: fonts.css  theme-init.js
scripts/: README-icons.md  generate-icons.ts  patch-service-worker.ts
src/: index.html  main.server.ts  server.ts  styles.scss
tests/: setup.ts
yana/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
(+867 files in other folders)
